// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFbt When using string templates should extract correctly multiple params 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 86,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "counting",
          "text": "{1} {2} {3} 4",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural (react native) 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 119,
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          Object {
            "type": 3,
          },
          Object {
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells their items",
                "tokenAliases": Object {},
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells their item",
                "tokenAliases": Object {},
              },
            },
            "1": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells her items",
                "tokenAliases": Object {},
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells her item",
                "tokenAliases": Object {},
              },
            },
            "2": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells his items",
                "tokenAliases": Object {},
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells his item",
                "tokenAliases": Object {},
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 119,
      "jsfbt": Object {
        "m": Array [
          Object {
            "token": "name",
            "type": 1,
          },
          null,
          null,
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells their items",
                "tokenAliases": Object {},
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells their item",
                "tokenAliases": Object {},
              },
            },
            "1": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells her items",
                "tokenAliases": Object {},
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells her item",
                "tokenAliases": Object {},
              },
            },
            "2": Object {
              "*": Object {
                "desc": "desc",
                "text": "{name} sells his items",
                "tokenAliases": Object {},
              },
              "_1": Object {
                "desc": "desc",
                "text": "{name} sells his item",
                "tokenAliases": Object {},
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly supports tables ie fbt:enum 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 37,
      "jsfbt": Object {
        "m": Array [
          null,
        ],
        "t": Object {
          "0": Object {
            "desc": "counting",
            "text": "a {2} {3} 4",
            "tokenAliases": Object {},
          },
          "1": Object {
            "desc": "counting",
            "text": "b {2} {3} 4",
            "tokenAliases": Object {},
          },
        },
      },
      "line_beg": 3,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with a param 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 52,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "great",
          "text": "testing {it} works",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with just string contents 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 19,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "ok",
          "text": "simple",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with the param being first 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 49,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "well",
          "text": "{it} still works",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should dedupe fbt:plurals 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 6,
      "jsfbt": Object {
        "m": Array [
          null,
          Object {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": Object {
          "*": Object {
            "*": Object {
              "desc": "desc...",
              "text": "There are {number} photos.",
              "tokenAliases": Object {},
            },
          },
          "_1": Object {
            "_1": Object {
              "desc": "desc...",
              "text": "There is 1 photo.",
              "tokenAliases": Object {},
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 9,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract common strings 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 27,
      "col_end": 60,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt.c strings 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 27,
      "col_end": 44,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 27,
      "col_end": 52,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings from a custom collector 1`] = `
Object {
  "childParentMappings": Object {
    "1": 0,
  },
  "phrases": Array [
    Object {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "description",
          "text": "Hello {=World}!",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 5,
      "project": "",
    },
    Object {
      "col_beg": 16,
      "col_end": 38,
      "filepath": "",
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "In the phrase: \\"Hello {=World}!\\"",
          "text": "World",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should not throw because of CSX 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if fbt call param doNotExtract is set to false 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 40,
      "doNotExtract": false,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if file-level doNotExtract is set to false 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 25,
      "doNotExtract": false,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if in-line doNotExtract is set to false 1`] = `
Object {
  "childParentMappings": Object {},
  "phrases": Array [
    Object {
      "col_beg": 0,
      "col_end": 46,
      "doNotExtract": false,
      "jsfbt": Object {
        "m": Array [],
        "t": Object {
          "desc": "foo",
          "text": "bar",
          "tokenAliases": Object {},
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;
